added header and burger-menu

--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,154 @@
     />
     <title>Title</title>
     <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <script
+      src="scripts/main.js"
+      defer
+    ></script>
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
-    <script src="scripts/main.js"></script>
+    <header class="header">
+      <div class="container header__container">
+        <a
+          href="#menu"
+          class="header__icon-menu icon icon--menu"
+        ></a>
+
+        <div class="header__top">
+          <a
+            href="#"
+            class="header__top-logo logo"
+          >
+            NA
+            <br />
+            MU
+          </a>
+        </div>
+
+        <div class="header__bottom">
+          <h1 class="header__bottom-title">ХУДОЖНІЙ МУЗЕЙ</h1>
+          <a
+            href="!#"
+            class="header__bottom-btn"
+          >
+            <p>КВИТКИ</p>
+          </a>
+        </div>
+
+        <a
+          href="!#"
+          class="header__events-btn"
+        >
+          ПОДІЇ
+        </a>
+      </div>
+    </header>
+
+    <aside
+      class="menu"
+      id="menu"
+    >
+      <div class="container menu__container">
+        <div class="menu__top">
+          <a
+            href="#!"
+            class="icon icon--close menu__close"
+          ></a>
+
+          <nav class="nav menu__nav">
+            <div class="nav__ul">
+              <li class="nav__li">
+                <a
+                  href="!#"
+                  class="nav__link"
+                >
+                  Галерея
+                </a>
+              </li>
+              <li class="nav__li">
+                <a
+                  href="!#"
+                  class="nav__link"
+                >
+                  Про Нас
+                </a>
+              </li>
+              <li class="nav__li">
+                <a
+                  href="!#"
+                  class="nav__link"
+                >
+                  Виставки та події
+                </a>
+              </li>
+              <li class="nav__li">
+                <a
+                  href="!#"
+                  class="nav__link"
+                >
+                  Контакти
+                </a>
+              </li>
+            </div>
+          </nav>
+        </div>
+
+        <div class="menu__bottom">
+          <div class="schedule menu__schedule">
+            <h4 class="schedule__title">Графік роботи</h4>
+
+            <ul class="schedule__ul">
+              <li class="schedule__li">
+                <span>12:00 — 20:00</span>
+                середа
+              </li>
+              <li class="schedule__li">
+                <span>12:00 — 20:00</span>
+                четвер
+              </li>
+              <li class="schedule__li">
+                <span>12:00 — 20:00</span>
+                п’ятниця
+              </li>
+              <li class="schedule__li">
+                <span>11:00 — 19:00</span>
+                субота
+              </li>
+              <li class="schedule__li">
+                <span>11:00 — 19:00</span>
+                неділя
+              </li>
+            </ul>
+          </div>
+
+          <div class="weekend menu__weekend">
+            <span>Вихідні:</span>
+            понеділок, вівторок Каса припиняє роботу за 1 годину до закриття
+            музею
+          </div>
+        </div>
+      </div>
+    </aside>
+
+    <div class="overlay"><a href="#"></a></div>
+
+    <main class="main"></main>
+
+    <footer class="footer"></footer>
   </body>
 </html>
