--- a/src/index.html
+++ b/src/index.html
@@ -154,7 +154,63 @@
 
     <div class="overlay"><a href="#"></a></div>
 
-    <main class="main"></main>
+    <main class="main">
+      <section class="events">
+        <div class="container events__container">
+          <h2 class="events__title title-h2">Актуальні події</h2>
+
+          <div class="events__items">
+            <article class="events-item">
+              <div class="events-item__img">
+                <img
+                  src="./img/events/events-1.jpg"
+                  alt="events"
+                />
+              </div>
+
+              <div class="events-item__info">
+                <div class="events-item__category-date">
+                  <div class="events-item__category">ВИСТАВКА</div>
+                  <div class="events-item__date">26.08-29.11.2019</div>
+                </div>
+                <h3 class="events-item__info-title title-h3">
+                  Йду і повертаюсь
+                </h3>
+                <p class="events-item__info-desc">
+                  Національний Художній Музей України презентує унікальну
+                  частину колекції Градобанку - українське мистецтво другої
+                  половини 1980-1995 років.
+                </p>
+              </div>
+            </article>
+
+            <article class="events-item">
+              <div class="events-item__img">
+                <img
+                  src="./img/events/events-2.jpg"
+                  alt="events"
+                />
+              </div>
+
+              <div class="events-item__info">
+                <div class="events-item__category-date">
+                  <div class="events-item__category">ВИСТАВКА</div>
+                  <div class="events-item__date">26.08-29.11.2019</div>
+                </div>
+                <h3 class="events-item__info-title title-h3">
+                  І спогади і мрії
+                </h3>
+                <p class="events-item__info-desc">
+                  Національний художній музей України до 100 річчя від дня
+                  народження видатної української художниці Тетяни Яблонської
+                  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                </p>
+              </div>
+            </article>
+          </div>
+        </div>
+      </section>
+    </main>
 
     <footer class="footer"></footer>
   </body>
