making events block

--- a/src/index.html
+++ b/src/index.html
@@ -24,9 +24,12 @@
       <div class="header__background-on-phone"></div>
       <div class="container">
         <div class="header__content">
-          <button class="icon icon--burger">
+          <a
+            href="#"
+            class="icon icon--burger"
+          >
             <span class="icon__line"></span>
-          </button>
+          </a>
 
           <a
             href="#"
@@ -89,66 +92,95 @@
     </header>
 
     <aside class="menu page__menu">
-      <div class="container">
-        <div class="menu__content">
-          <nav class="nav nav--margin-left">
-            <ul class="nav__list">
-              <div class="nav__column">
-                <li class="nav__item">
-                  <a
-                    href="#"
-                    class="nav__link nav__link--menu-setting"
-                  >
-                    <span class="nav__link-text">Галерея</span>
-                  </a>
-                </li>
-                <li class="nav__item nav__item--height">
-                  <a
-                    href="#"
-                    class="nav__link nav__link--menu-setting"
-                  >
-                    <span class="nav__link-text">Виставки та події</span>
-                  </a>
-                </li>
-              </div>
-              <div class="nav__column">
-                <li class="nav__item">
-                  <a
-                    href="#"
-                    class="nav__link nav__link--menu-setting"
-                  >
-                    <span class="nav__link-text">Про Нас</span>
-                  </a>
-                </li>
-                <li class="nav__item nav__item--height">
-                  <a
-                    href="#"
-                    class="nav__link nav__link--menu-setting"
-                  >
-                    <span class="nav__link-text">Контакти</span>
-                  </a>
-                </li>
-              </div>
-            </ul>
-          </nav>
-          <div class="menu__separator"></div>
-          <div class="info">
-            <h6 class="info__title">Графік роботи</h6>
-            <div class="info__bottom-wrap">
-              <ul class="info__chart">
-                <li class="info__chart-item"><span class="info__chart-text"><strong>12:00 — 20:00</strong> середа</span></li>
-                <li class="info__chart-item"><span class="info__chart-text"><strong>12:00 — 20:00</strong> четвер</span></li>
-                <li class="info__chart-item">
-                  <span class="info__chart-text"><strong>12:00 — 20:00</strong> п’ятниця</span>
-                </li>
-                <li class="info__chart-item"><span class="info__chart-text"><strong>11:00 — 19:00</strong> субота</span></li>
-                <li class="info__chart-item"><span class="info__chart-text"><strong>11:00 — 19:00</strong> неділя</span></li>
+      <div class="menu__wrapper">
+        <div class="container">
+          <div class="menu__content">
+            <nav class="nav nav--padding">
+              <ul class="nav__list nav__list--margin-left">
+                <div class="nav__column">
+                  <li class="nav__item">
+                    <a
+                      href="#"
+                      class="nav__link nav__link--menu-setting"
+                    >
+                      <span class="nav__link-text">Галерея</span>
+                    </a>
+                  </li>
+                  <li class="nav__item nav__item--height">
+                    <a
+                      href="#"
+                      class="nav__link nav__link--menu-setting"
+                    >
+                      <span class="nav__link-text">Виставки та події</span>
+                    </a>
+                  </li>
+                </div>
+                <div class="nav__column">
+                  <li class="nav__item">
+                    <a
+                      href="#"
+                      class="nav__link nav__link--menu-setting"
+                    >
+                      <span class="nav__link-text">Про Нас</span>
+                    </a>
+                  </li>
+                  <li class="nav__item nav__item--height">
+                    <a
+                      href="#"
+                      class="nav__link nav__link--menu-setting"
+                    >
+                      <span class="nav__link-text">Контакти</span>
+                    </a>
+                  </li>
+                </div>
               </ul>
-              <div class="info__weekends">
-                <span class="info__weekends-text">
-                  <strong>Вихідні:</strong> понеділок, вівторок <br> Каса припиняє роботу за 1 годину до
-                  закриття музею
-                </span>
+            </nav>
+
+            <div class="menu__separator"></div>
+
+            <div class="info info--padding">
+              <h6 class="info__title">Графік роботи</h6>
+              <div class="info__bottom-wrap">
+                <ul class="info__chart">
+                  <li class="info__chart-item">
+                    <span class="info__chart-text">
+                      <strong>12:00 — 20:00</strong>
+                      середа
+                    </span>
+                  </li>
+                  <li class="info__chart-item">
+                    <span class="info__chart-text">
+                      <strong>12:00 — 20:00</strong>
+                      четвер
+                    </span>
+                  </li>
+                  <li class="info__chart-item">
+                    <span class="info__chart-text">
+                      <strong>12:00 — 20:00</strong>
+                      п’ятниця
+                    </span>
+                  </li>
+                  <li class="info__chart-item">
+                    <span class="info__chart-text">
+                      <strong>11:00 — 19:00</strong>
+                      субота
+                    </span>
+                  </li>
+                  <li class="info__chart-item">
+                    <span class="info__chart-text">
+                      <strong>11:00 — 19:00</strong>
+                      неділя
+                    </span>
+                  </li>
+                </ul>
+                <div class="info__weekends">
+                  <span class="info__weekends-text">
+                    <strong>Вихідні:</strong>
+                    понеділок, вівторок
+                    <br />
+                    Каса припиняє роботу за 1 годину до закриття музею
+                  </span>
+                </div>
               </div>
             </div>
           </div>
@@ -157,7 +189,27 @@
     </aside>
 
     <main>
-      <section></section>
+      <section class="events">
+        <div class="container">
+          <div class="events__content">
+            <img
+              src="./images/events-image.png"
+              alt="Пейзаж із морем та горами"
+              class="events__image"
+            />
+            <article class="events__info">
+              <div class="events__info-top">
+                <span class="events__top-text"></span>
+                <span class="events__top-text"></span>
+              </div>
+
+              <h3 class="events__title"></h3>
+
+              <p class="events__subtitle"></p>
+            </article>
+          </div>
+        </div>
+      </section>
       <section></section>
       <section></section>
       <section></section>
