--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,270 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>NAMU Museum</title>
+    <link
+      rel="icon"
+      href="images/namu-logo.svg"
+      type="image/x-icon"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <link
       rel="stylesheet"
       href="./styles/main.scss"
     />
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+
+  <body class="page__body">
+    <header class="header">
+      <div class="container">
+        <div class="top-bar">
+          <a
+            href="#menu"
+            class="icon icon--menu"
+          ></a>
+          <a
+            href="index.html"
+            class="top-bar__logo-link"
+          >
+            <img
+              src="images/namu-logo.svg"
+              alt="Namu logo"
+              class="top-bar__logo"
+            />
+          </a>
+        </div>
+      </div>
+    </header>
+    <aside
+      class="page__menu"
+      id="menu"
+    >
+      <div class="container">
+        <div class="page__menu-wrapper">
+          <div class="top-bar">
+            <a
+              href="#"
+              class="icon icon--close"
+            ></a>
+          </div>
+          <nav class="nav">
+            <ul class="nav__list">
+              <li class="nav__item">
+                <a
+                  href="#gallery"
+                  class="nav__link"
+                >
+                  Галерея
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  href="#about-us"
+                  class="nav__link"
+                >
+                  Про Нас
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  href="#events"
+                  class="nav__link"
+                >
+                  Виставки та події
+                </a>
+              </li>
+              <li class="nav__item">
+                <a
+                  href="#contact-us"
+                  class="nav__link"
+                >
+                  Контакти
+                </a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+        <span class="page__menu-line"></span>
+        <h3 class="page__menu-title">Графік роботи</h3>
+        <ul class="page__menu-list">
+          <li class="page__menu-item">
+            <span class="page__menu-item--bold">12:00 — 20:00</span>
+            середа
+          </li>
+          <li class="page__menu-item">
+            <span class="page__menu-item--bold">12:00 — 20:00</span>
+            четвер
+          </li>
+          <li class="page__menu-item">
+            <span class="page__menu-item--bold">12:00 — 20:00</span>
+            п’ятниця
+          </li>
+          <li class="page__menu-item">
+            <span class="page__menu-item--bold">11:00 — 19:00</span>
+            субота
+          </li>
+          <li class="page__menu-item">
+            <span class="page__menu-item--bold">11:00 — 19:00</span>
+            неділя
+          </li>
+        </ul>
+        <p class="page__menu-description">
+          <span class="page__menu-description--bold">Вихідні:</span>
+          понеділок, вівторок Каса припиняє роботу за 1 годину до закриття музею
+        </p>
+      </div>
+    </aside>
+    <main class="main">
+      <section class="tickets">
+        <img
+          src="images/header-bg.png"
+          alt="Tickets image"
+          class="tickets__image"
+        />
+        <div class="container">
+          <h1 class="tickets__title">Художній музей</h1>
+          <div class="tickets__button-wrapper">
+            <button class="tickets__button">Квитки</button>
+            <img
+              src="images/icons/arrow-icon.svg"
+              alt="Arrow icon"
+              class="tickets__button-arrow"
+            />
+          </div>
+        </div>
+      </section>
+      <section
+        class="events"
+        id="events"
+      >
+        <div class="container">
+          <h3 class="events__title">Актуальні події</h3>
+          <div class="events__wrapper">
+            <div class="events__item">
+              <img
+                src="images/events/turn-back-img.png"
+                alt="Turn back image"
+                class="events__image"
+              />
+              <h3 class="events__caption">
+                Виставка
+                <span class="events__date">26.08-29.11.2019</span>
+              </h3>
+              <p class="events__name">
+                Йду і повертаюсь
+                <span class="events__square"></span>
+              </p>
+              <p class="events__description">
+                Національний Художній Музей України презентує унікальну частину
+                <br />
+                колекції Градобанку - українське мистецтво другої половини
+                <br />
+                1980-1995 років.
+              </p>
+            </div>
+            <div class="events__item">
+              <img
+                src="images/events/memories-dreams-img.png"
+                alt="Turn back image"
+                class="events__image"
+              />
+              <h3 class="events__caption">
+                Виставка
+                <span class="events__date">26.08-29.11.2019</span>
+              </h3>
+              <p class="events__name">
+                І спогади і мрії
+                <span class="events__square"></span>
+              </p>
+              <p class="events__description">
+                Національний художній музей України до 100 річчя від дня
+                народження видатної української художниці Тетяни Яблонської
+                відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="events-bottom">
+          <img
+            src="images/events/lection-img.png"
+            alt="Lection image"
+            class="events-bottom__background-image"
+          />
+          <div class="events-bottom__item">
+            <div class="wrapper">
+              <p class="events-bottom__caption">
+                Лекція
+                <span class="events-bottom__date">26/08/2019 - 11:00</span>
+              </p>
+              <p class="events-bottom__name">Від класицизму до романтизму</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="gallery">
+        <div class="container">
+          <h3 class="gallery__title">
+            Галерея
+          </h3>
+        </div>
+        <div class="gallery__wrapper">
+          <div class="gallery__item">
+            <img src="images/gallery/women-img.png" alt="Women image"
+            class="gallery__image">
+          </div>
+          <div class="gallery__item">
+            <img src="images/gallery/houses-img.png" alt="Houses image"
+            class="gallery__image">
+          </div>
+          <div class="gallery__item">
+            <img src="images/gallery/park-img.png" alt="Park image"
+            class="gallery__image">
+          </div>
+          <div class="gallery__item">
+            <img src="images/gallery/sea-img.png" alt="Sea image"
+            class="gallery__image">
+          </div>
+        </div>
+        <div class="container">
+          <div class="gallery__dots">
+            <span class="gallery__dot gallery__dot--active"></span>
+            <span class="gallery__dot"></span>
+            <span class="gallery__dot"></span>
+            <span class="gallery__dot"></span>
+          </div>
+        </div>
+      </section>
+      <section class="subscribe">
+        <div class="subscribe__wrapper">
+          <h3 class="subscribe__title">
+            Підписка
+          </h3>
+          <p class="subscribe__description">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+          <form class="subscribe__form">
+            <input type="email" class="subscribe__input"
+            placeholder="E-mail">
+            <button class="subscribe__button">
+              <img src="images/icons/arrow-submit-icon.svg" alt="Arrow icon"
+              class="subscribe__button-icon">
+            </button>
+          </form>
+        </div>
+      </section>
+      <footer class="footer"></footer>
+    </main>
     <script src="scripts/main.js"></script>
   </body>
 </html>
