have fixed a menu

--- a/src/index.html
+++ b/src/index.html
@@ -106,48 +106,55 @@
     >
       <div class="menu__grid">
         <div class="menu__content">
-          <a
-            href="#"
-            class="icons icons--close"
-          ></a>
+          <!-- #region menu-top -->
+          <div class="menu__top">
+            <a
+              href="#"
+              class="icons icons--close"
+            ></a>
 
-          <!-- #region navigation -->
-          <nav class="nav menu__nav">
-            <ul class="nav__list">
-              <li class="nav__item">
-                <a
-                  href="#gallery"
-                  class="nav__link"
-                >
-                  Галерея
-                </a>
-              </li>
-              <li class="nav__item">
-                <a
-                  href="#contact-us"
-                  class="nav__link"
-                >
-                  Про Нас
-                </a>
-              </li>
-              <li class="nav__item">
-                <a
-                  href="#events"
-                  class="nav__link"
-                >
-                  Виставки та події
-                </a>
-              </li>
-              <li class="nav__item">
-                <a
-                  href="#contact-us"
-                  class="nav__link"
-                >
-                  Контакти
-                </a>
-              </li>
-            </ul>
-          </nav>
+            <!-- #region navigation -->
+            <nav class="nav menu__nav">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a
+                    href="#gallery"
+                    class="nav__link"
+                  >
+                    Галерея
+                  </a>
+                </li>
+
+                <li class="nav__item">
+                  <a
+                    href="#contact-us"
+                    class="nav__link"
+                  >
+                    Про Нас
+                  </a>
+                </li>
+
+                <li class="nav__item">
+                  <a
+                    href="#events"
+                    class="nav__link"
+                  >
+                    Виставки та події
+                  </a>
+                </li>
+
+                <li class="nav__item">
+                  <a
+                    href="#contact-us"
+                    class="nav__link"
+                  >
+                    Контакти
+                  </a>
+                </li>
+              </ul>
+            </nav>
+            <!-- #endregion -->
+          </div>
           <!-- #endregion -->
 
           <div class="menu__line"></div>
