--- a/src/index.html
+++ b/src/index.html
@@ -192,21 +192,26 @@
       <section class="events">
         <div class="container">
           <div class="events__content">
-            <img
-              src="./images/events-image.png"
-              alt="Пейзаж із морем та горами"
-              class="events__image"
-            />
-            <article class="events__info">
-              <div class="events__info-top">
-                <span class="events__top-text"></span>
-                <span class="events__top-text"></span>
-              </div>
-
-              <h3 class="events__title"></h3>
-
-              <p class="events__subtitle"></p>
-            </article>
+            <h2 class="title">Актуальні події</h2>
+            <div class="events__block_info">
+              <img
+                src="./images/events-image.png"
+                alt="Пейзаж із морем та горами"
+                class="events__image"
+              />
+              <article class="events__info">
+                <div class="events__info-top">
+                  <span class="events__top-text">ВИСТАВКА</span>
+                  <span class="events__top-text">26.08-29.11.2019</span>
+                </div>
+                <h3 class="events__info-title">Йду і повертаюсь</h3>
+                <p class="events__subtitle">
+                  Національний Художній Музей України презентує унікальну частину
+                  колекції Градобанку - українське мистецтво другої половини
+                  1980-1995 років.
+                </p>
+              </article>
+            </div>
           </div>
         </div>
       </section>
