--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,17 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>NAMU</title>
+    <link
+      rel="icon"
+      href="./img/icons/logo.svg"
+      type="image/svg"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <link
       rel="preconnect"
       href="https://fonts.googleapis.com"
@@ -50,7 +60,7 @@
         <div class="header__bottom">
           <h1 class="header__bottom-title">ХУДОЖНІЙ МУЗЕЙ</h1>
           <a
-            href="!#"
+            href="#events"
             class="header__bottom-btn"
           >
             <p>КВИТКИ</p>
@@ -81,7 +91,7 @@
             <div class="nav__ul">
               <li class="nav__li">
                 <a
-                  href="!#"
+                  href="#gallery"
                   class="nav__link"
                 >
                   Галерея
@@ -89,7 +99,7 @@
               </li>
               <li class="nav__li">
                 <a
-                  href="!#"
+                  href="#announcement"
                   class="nav__link"
                 >
                   Про Нас
@@ -97,7 +107,7 @@
               </li>
               <li class="nav__li">
                 <a
-                  href="!#"
+                  href="#events"
                   class="nav__link"
                 >
                   Виставки та події
@@ -105,7 +115,7 @@
               </li>
               <li class="nav__li">
                 <a
-                  href="!#"
+                  href="#footer"
                   class="nav__link"
                 >
                   Контакти
@@ -155,7 +165,10 @@
     <div class="overlay"><a href="#"></a></div>
 
     <main class="main">
-      <section class="events">
+      <section
+        class="events"
+        id="events"
+      >
         <div class="container events__container">
           <h2 class="events__title title-h2">Актуальні події</h2>
 
@@ -169,9 +182,13 @@
               </div>
 
               <div class="events-item__info">
-                <div class="events-item__category-date">
-                  <div class="events-item__category">ВИСТАВКА</div>
-                  <div class="events-item__date">26.08-29.11.2019</div>
+                <div class="events-item__category-date category-date">
+                  <div class="events-item__category category-date__category">
+                    ВИСТАВКА
+                  </div>
+                  <div class="events-item__date category-date__date">
+                    26.08-29.11.2019
+                  </div>
                 </div>
                 <h3 class="events-item__info-title title-h3">
                   Йду і повертаюсь
@@ -193,9 +210,13 @@
               </div>
 
               <div class="events-item__info">
-                <div class="events-item__category-date">
-                  <div class="events-item__category">ВИСТАВКА</div>
-                  <div class="events-item__date">26.08-29.11.2019</div>
+                <div class="events-item__category-date category-date">
+                  <div class="events-item__category category-date__category">
+                    ВИСТАВКА
+                  </div>
+                  <div class="events-item__date category-date__date">
+                    26.08-29.11.2019
+                  </div>
                 </div>
                 <h3 class="events-item__info-title title-h3">
                   І спогади і мрії
@@ -210,8 +231,257 @@
           </div>
         </div>
       </section>
+
+      <section
+        class="announcement"
+        id="announcement"
+      >
+        <div class="container announcement__container">
+          <div class="announcement__content">
+            <div class="announcement__category-date category-date">
+              <div class="category-date__category">ЛЕКЦІЯ</div>
+              <div class="category-date__date">26/08/2019 - 11:00</div>
+            </div>
+
+            <h3 class="announcement__title title-h3">
+              Від класицизму до романтизму
+            </h3>
+          </div>
+        </div>
+      </section>
+
+      <section
+        class="gallery"
+        id="gallery"
+      >
+        <div class="container gallery__container">
+          <h2 class="gallery__title title-h2">Галерея</h2>
+
+          <div class="swiper mySwiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <img
+                  src="./img/swiper/slide-1.jpg"
+                  alt="slide"
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="./img/swiper/slide-2.jpg"
+                  alt="slide"
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="./img/swiper/slide-1.jpg"
+                  alt="slide"
+                />
+              </div>
+              <div class="swiper-slide">
+                <img
+                  src="./img/swiper/slide-2.jpg"
+                  alt="slide"
+                />
+              </div>
+            </div>
+            <div class="swiper-pagination"></div>
+          </div>
+
+          <div class="gallery__images">
+            <img
+              src="./img/gallery/img-1.jpg"
+              alt="gallery photo"
+              class="gallery__img gallery__images--1"
+            />
+            <img
+              src="./img/gallery/img-2.jpg"
+              alt="gallery photo"
+              class="gallery__img gallery__images--2"
+            />
+            <img
+              src="./img/gallery/img-3.jpg"
+              alt="gallery photo"
+              class="gallery__img gallery__images--3"
+            />
+            <img
+              src="./img/gallery/img-4.jpg"
+              alt="gallery photo"
+              class="gallery__img gallery__images--4"
+            />
+          </div>
+        </div>
+      </section>
+
+      <section class="subscription">
+        <div class="container subscription__container">
+          <div class="subscription__wrapper">
+            <h2 class="subscription__title title-h2">Підписка</h2>
+
+            <p class="subscription__desc">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </p>
+
+            <form
+              class="form"
+              action="#"
+              method="post"
+              onsubmit="this.reset(); return false;"
+            >
+              <input
+                type="email"
+                placeholder="E-mail"
+                class="form__field"
+              />
+              <button class="form__button"></button>
+            </form>
+          </div>
+        </div>
+      </section>
     </main>
 
-    <footer class="footer"></footer>
+    <footer
+      class="footer"
+      id="footer"
+    >
+      <div class="container">
+        <div class="footer__content">
+          <div class="footer__top">
+            <a
+              href="#"
+              class="footer__logo logo"
+            >
+              NA
+              <br />
+              MU
+            </a>
+            <div class="socials">
+              <a
+                href="https://uk-ua.facebook.com/"
+                class="icon icon--facebook"
+                target="_blank"
+              ></a>
+              <a
+                href="https://www.instagram.com/"
+                class="icon icon--instagram"
+                target="_blank"
+              ></a>
+            </div>
+          </div>
+          <div class="footer__schedule schedule">
+            <h4 class="schedule__title">Графік роботи</h4>
+            <div class="footer__schedule-content schedule__content">
+              <ul class="schedule__ul">
+                <li class="schedule__li">
+                  <span>12:00 — 20:00</span>
+                  середа
+                </li>
+                <li class="schedule__li">
+                  <span>12:00 — 20:00</span>
+                  четвер
+                </li>
+                <li class="schedule__li">
+                  <span>12:00 — 20:00</span>
+                  п’ятниця
+                </li>
+                <li class="schedule__li">
+                  <span>11:00 — 19:00</span>
+                  субота
+                </li>
+                <li class="schedule__li">
+                  <span>11:00 — 19:00</span>
+                  неділя
+                </li>
+              </ul>
+              <div class="footer__weekend weekend">
+                <span>Вихідні:</span>
+                понеділок, вівторок
+                <br />
+                Каса припиняє роботу за 1 годину до закриття музею
+              </div>
+            </div>
+          </div>
+          <div class="contacts">
+            <h4 class="contacts__title">Контакти:</h4>
+            <a
+              href="https://maps.app.goo.gl/kJvRChjivUxhXr6d7"
+              class="contacts__link"
+              target="_blank"
+            >
+              вул. М. Грушевського, 6; Київ, 01001
+            </a>
+            <a
+              href="tel:+38 (044) 278-13-57"
+              class="contacts__link"
+            >
+              тел. +38 044 278-13-57
+            </a>
+            <a
+              href="tel:+38 (044) 278-13-57"
+              class="contacts__link"
+            >
+              факс +38 044 278-74-54
+            </a>
+            <a
+              href="mailto:info@namu.kiev.ua"
+              class="contacts__link"
+            >
+              e-mail: info@namu.kiev.ua
+            </a>
+          </div>
+          <nav class="nav footer__nav">
+            <div class="nav__ul">
+              <li class="nav__li">
+                <a
+                  href="#gallery"
+                  class="nav__link"
+                >
+                  Галерея
+                </a>
+              </li>
+              <li class="nav__li">
+                <a
+                  href="#announcement"
+                  class="nav__link"
+                >
+                  Про Нас
+                </a>
+              </li>
+              <li class="nav__li">
+                <a
+                  href="#events"
+                  class="nav__link"
+                >
+                  Виставки та події
+                </a>
+              </li>
+              <li class="nav__li">
+                <a
+                  href="#footer"
+                  class="nav__link"
+                >
+                  Контакти
+                </a>
+              </li>
+            </div>
+          </nav>
+          <div class="footer__bottom">
+            <p class="footer__designed">Designed by Zhyriada Marina</p>
+            <p class="footer__copyright">
+              Copyright © 2019. All Rights Reserved.
+            </p>
+          </div>
+
+          <a
+            href="#"
+            class="footer__arrow-top icon"
+          >
+            <img
+              src="./img/icons/arrow-top.svg"
+              alt="arrow-top"
+            />
+          </a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
