--- a/src/index.html
+++ b/src/index.html
@@ -563,40 +563,38 @@
           <div class="footer__contacts">
             <h3 class="footer__contacts-title">Контакти:</h3>
 
-            <address class="footer__contacts-address">
-              <p class="footer__contacts-text">
-                <a
-                  href="https://maps.app.goo.gl/DseMD7v73qcu7Au17"
-                  class="footer__contacts-link"
-                  target="_blank"
-                >
-                  вул. М. Грушевського, 6;
-                  <br />
-                  Київ, 01001
-                  <br />
-                </a>
-                <a
-                  href="tel:+380442781357"
-                  class="footer__contacts-link"
-                >
-                  тел. +38 (044) 278-13-57
-                  <br />
-                </a>
-                <a
-                  href="tel:+380442787454"
-                  class="footer__contacts-link"
-                >
-                  факс +38 (044) 278-74-54
-                  <br />
-                </a>
-                <a
-                  href="mailto:info@namu.kiev.ua"
-                  class="footer__contacts-link"
-                >
-                  e-mail: info@namu.kiev.ua
-                </a>
-              </p>
-            </address>
+            <div class="footer__contacts-address">
+              <a
+                href="https://maps.app.goo.gl/DseMD7v73qcu7Au17"
+                class="footer__contacts-link"
+                target="_blank"
+              >
+                вул. М. Грушевського, 6;
+                <br />
+                Київ, 01001
+                <br />
+              </a>
+              <a
+                href="tel:+380442781357"
+                class="footer__contacts-link"
+              >
+                тел. +38 (044) 278-13-57
+                <br />
+              </a>
+              <a
+                href="tel:+380442787454"
+                class="footer__contacts-link"
+              >
+                факс +38 (044) 278-74-54
+                <br />
+              </a>
+              <a
+                href="mailto:info@namu.kiev.ua"
+                class="footer__contacts-link"
+              >
+                e-mail: info@namu.kiev.ua
+              </a>
+            </div>
           </div>
 
           <div class="footer__go-up">
