--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,216 @@
 <!doctype html>
-<html lang="en">
+<html lang="uk">
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>Художній Музей</title>
+
+    <link
+      rel="icon"
+      href="./images/icons/favicon-32x32.png"
+      type="image/x-icon"
+    />
     <link
       rel="stylesheet"
-      href="./styles/main.scss"
+      href="./styles/entire.scss"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;600;700&family=Montserrat:wght@400;500;700&display=swap"
+      rel="stylesheet"
     />
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
-    <script src="scripts/main.js"></script>
+    <header class="header">
+      <div class="header__content">
+        <a href="#dropdown-menu" class="header__menu-icon"
+          id="menu-toggle">
+          <img src="./images/icons/burger-menu-icon.svg"
+          alt="Menu Icon" />
+        </a>
+
+
+        <aside class="header__menu" id="dropdown-menu">
+          <div class="header__menu container">
+            <nav class="nav">
+              <ul class="nav__list">
+                <li class="nav__item"><a class="nav__link" href="#gallery">Галерея</a></li>
+                <li class="nav__item"><a class="nav__link" href="#events">Виставки та події</a></li>
+                <li class="nav__item"><a class="nav__link" href="#about-us">Про Нас</a></li>
+                <li class="nav__item"><a class="nav__link" href="#contacts">Контакти</a></li>
+              </ul>
+            </nav>
+            <div class="header__menu-hours">
+              <h4>Графік роботи</h4>
+              <ul>
+                <li>12:00 — 20:00 середа</li>
+                <li>12:00 — 20:00 четвер</li>
+                <li>12:00 — 20:00 п'ятниця</li>
+                <li>11:00 — 19:00 субота</li>
+                <li>11:00 — 19:00 неділя</li>
+              </ul>
+              <p>Вихідні: понеділок, вівторок</p>
+              <p>Каса припиняє роботу за 1 годину до закриття музею</p>
+            </div>
+          </div>
+        </aside>
+
+        <div class="header__image">
+          <h2 class="header__logo">NA <br> MU</h2>
+        </div>
+
+        <div class="header__text">
+          <h1 class="header__text-title">ХУДОЖНІЙ МУЗЕЙ</h1>
+          <div class="header__cta">
+            <a href="#tickets" class="header__cta-button">
+          КВИТКИ
+              <img src="./images/icons/arrow_right.png" alt="Arrow" />
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    </header>
+
+
+
+
+
+
+    <main>
+      <div class="main__content">
+
+        <section class="events">
+          <h2 class="events__section-title">Актуальні події</h2>
+          <div class="events__grid">
+            <!-- Event 1 -->
+            <div class="events__block">
+              <img
+                class="events__image"
+                src="./images/events-1.svg"
+               alt="Йду і повертаюсь"
+              />
+              <div class="events__details">
+                <div class="events__meta">
+                  <p class="events__meta-type">ВИСТАВКА</p>
+                  <p class="events__meta-date">26.08-29.11.2019</p>
+                </div>
+                <h3 class="events__name">Йду і повертаюсь</h3>
+                <p class="events__description">
+                  Національний Художній Музей України презентує унікальну частину
+                  колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <!-- Event 2 -->
+          <div class="events__grid">
+            <div class="events__block">
+              <img
+                class="events__image"
+                src="./images/events-2.svg"
+                alt="І спогади і мрії"
+              />
+              <div class="events__details">
+                <div class="events__meta">
+                  <p class="events__meta-type">ВИСТАВКА</p>
+                  <p class="events__meta-date">26.08-29.11.2019</p>
+                </div>
+                <h3 class="events__name">І спогади і мрії</h3>
+                <p class="events__description">
+                  Національний художній музей України до 100 річчя від дня народження
+                  видатної української художниці Тетяни Яблонської відкриває ретроспективну
+                  ювілейну виставку «І спогади і мрії».
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
+
+
+
+        <!--classicism block -->
+        <section class="classicism">
+          <h2 class="classicism__title">Від класицизму до романтизму</h2>
+          <p class="classicism__description">
+            Колекція, що змінює уявлення про мистецтво
+          </p>
+        </section>
+
+        <!-- Gallery block -->
+        <section class="gallery">
+          <h2 class="gallery__title">Галерея</h2>
+          <div class="gallery__slider">
+            <img
+              src="images/gallery-1.svg"
+              alt="Gallery 1"
+              class="gallery__image"
+            />
+            <img
+              src="images/gallery-2.svg"
+              alt="Gallery 2"
+              class="gallery__image"
+           />
+          </div>
+        </section>
+      </div>
+      <!-- Subscribe block -->
+      <section class="subscribe">
+        <h2 class="subscribe__title">Підпишіться на новини</h2>
+        <form class="subscribe__form">
+          <input
+            type="email"
+            class="subscribe__input"
+            placeholder="Введіть ваш email"
+          />
+          <button
+            type="submit"
+            class="subscribe__button"
+          >
+            Підписатись
+          </button>
+        </form>
+      </section>
+
+      <!--Contacts block-->
+
+    </main>
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="footer__container">
+        <div class="footer__hours">
+          <h4>Графік роботи</h4>
+          <ul>
+            <li>12:00 — 20:00 середа</li>
+            <li>12:00 — 20:00 четвер</li>
+            <li>12:00 — 20:00 п'ятниця</li>
+            <li>11:00 — 19:00 субота</li>
+            <li>11:00 — 19:00 неділя</li>
+          </ul>
+          <p>Вихідні: понеділок, вівторок</p>
+          <p>Kaca припиняє роботу за 1 годину до закриття музею</p>
+        </div>
+        <nav  class="footer__nav">
+          <ul class="footer__links">
+            <li><a href="#gallery">Галерея</a></li>
+            <li><a href="#events">Виставки та події</a></li>
+            <li><a href="#about-us">Про Hac</a></li>
+            <li><a href="#contacts">Контакти</a></li>
+          </ul>
+        </nav>
+        <div class="footer__copyright">
+          <p class="footer__text--left">Copyright © 2019. All Rights Reserved.</p>
+          <p class="footer__text--right">Designed by Zhyriada Marina</p>
+        </div>
+        </nav>
+      </div>
+    </footer>
   </body>
 </html>
