add task solution

--- a/src/index.html
+++ b/src/index.html
@@ -156,7 +156,28 @@
             <img
               src="images/gallery-2.svg"
               alt="Gallery 2"
-              class="gallery__image"
+              class="gallery__image gallery__image--tablet"
+           />
+            <img
+              src="images/gallery-3-tablet.svg"
+              alt="Gallery 2"
+              class="gallery__image gallery__image--tablet"
+           />
+
+            <img
+              src="images/gallery-art-2.svg"
+              alt="Gallery 2"
+              class="gallery__image gallery__image--desktop"
+           />
+            <img
+              src="images/gallery-art-3.svg"
+              alt="Gallery 2"
+              class="gallery__image gallery__image--desktop"
+           />
+            <img
+              src="images/gallery-art-4.svg"
+              alt="Gallery 2"
+              class="gallery__image gallery__image--desktop"
            />
           </div>
         </section>
