--- a/src/index.html
+++ b/src/index.html
@@ -60,10 +60,9 @@
             alt="home icon"
           />
         </a>
-        <div></div>
       </div>
-      <div class="nav__img"></div>
     </header>
+    <div class="nav__img"></div>
 
     <div class="hero">
       <h1 class="hero__title">ХУДОЖНІЙ МУЗЕЙ</h1>
@@ -96,18 +95,20 @@
               alt="f"
             />
           </div>
-          <div class="current-events-item-data">
-            <p class="current-events-item-data-title">ВИСТАВКА</p>
-            <p class="current-events-item-data-time">26.08-29.11.2019</p>
-          </div>
-          <div class="current-events-item-title">
-            <p>Йду і повертаюсь</p>
-            <div></div>
-          </div>
-          <div class="current-events-item-text">
-            Національний Художній Музей України презентує унікальну частину
-            колекції Градобанку - українське мистецтво другої половини 1980-1995
-            років.
+          <div>
+            <div class="current-events-item-data">
+              <p class="current-events-item-data-title">ВИСТАВКА</p>
+              <p class="current-events-item-data-time">26.08-29.11.2019</p>
+            </div>
+            <div class="current-events-item-title">
+              <p>Йду і повертаюсь</p>
+              <div></div>
+            </div>
+            <div class="current-events-item-text">
+              Національний Художній Музей України презентує унікальну частину
+              колекції Градобанку - українське мистецтво другої половини
+              1980-1995 років.
+            </div>
           </div>
         </div>
 
@@ -118,18 +119,20 @@
               alt="f"
             />
           </div>
-          <div class="current-events-item-data">
-            <p class="current-events-item-data-title">ВИСТАВКА</p>
-            <p class="current-events-item-data-time">26.08-29.11.2019</p>
-          </div>
-          <div class="current-events-item-title">
-            <p>І спогади і мрії</p>
-            <div></div>
-          </div>
-          <div class="current-events-item-text">
-            Національний художній музей України до 100 річчя від дня народження
-            видатної української художниці Тетяни Яблонської відкриває
-            ретроспективну ювілейну виставку «І спогади і мрії».
+          <div>
+            <div class="current-events-item-data">
+              <p class="current-events-item-data-title">ВИСТАВКА</p>
+              <p class="current-events-item-data-time">26.08-29.11.2019</p>
+            </div>
+            <div class="current-events-item-title">
+              <p>І спогади і мрії</p>
+              <div></div>
+            </div>
+            <div class="current-events-item-text">
+              Національний художній музей України до 100 річчя від дня
+              народження видатної української художниці Тетяни Яблонської
+              відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            </div>
           </div>
         </div>
       </div>
@@ -142,8 +145,8 @@
         />
         <div class="lection-info">
           <div class="lection-info-data">
-            <p>ЛЕКЦІЯ</p>
-            <p>26/08/2019 - 11:00</p>
+            <div>ЛЕКЦІЯ</div>
+            <div>26/08/2019 - 11:00</div>
           </div>
           <div class="lection-info-title">Від класицизму до романтизму</div>
         </div>
@@ -154,6 +157,30 @@
         <div class="slider-wrapper">
           <div class="slider">
             <div class="slides">
+              <div class="slide">
+                <img
+                  src="./images/slide1.png"
+                  alt="Slide 1"
+                />
+              </div>
+              <div class="slide">
+                <img
+                  src="./images/slide2.png"
+                  alt="Slide 2"
+                />
+              </div>
+              <div class="slide">
+                <img
+                  src="./images/slide3.png"
+                  alt="Slide 3"
+                />
+              </div>
+              <div class="slide">
+                <img
+                  src="./images/slide4.png"
+                  alt="Slide 4"
+                />
+              </div>
               <div class="slide">
                 <img
                   src="./images/slide1.png"
