--- a/src/index.html
+++ b/src/index.html
@@ -188,76 +188,101 @@
       </div>
     </aside>
 
-    <main>
-      <section class="events-section page__events-section">
-        <div class="container">
-          <div class="events-section__content">
-            <h2 class="title events-section__title">Актуальні події</h2>
-
-            <div class="events-section__block_info">
-              <div class="events-section__image">
-                <img
-                  src="./images/events-image.png"
-                  alt="Картина 'Кримський берег', написана 1890-ті рр."
-                  class="events-section__img"
-                />
-              </div>
-              <article class="event events-section__event">
-                <div
-                  class="event__info-top event__info-top--events-section-gap event__info-top--margin"
-                >
-                  <span class="event__top-text event__top-text--name">
-                    ВИСТАВКА
-                  </span>
-                  <span class="event__top-text event__top-text--date">
-                    26.08-29.11.2019
-                  </span>
+    <main class="main">
+      <div class="main__wrap">
+        <section class="events-section page__events-section">
+          <div class="container">
+            <div class="events-section__content">
+              <h2 class="title events-section__title">Актуальні події</h2>
+              <div class="events-section__block_info">
+                <div class="events-section__image">
+                  <img
+                    src="./images/events-image.png"
+                    alt="Картина 'Кримський берег', написана 1890-ті рр."
+                    class="events-section__img"
+                  />
                 </div>
-                <h3 class="event__title event__title--before">
-                  Йду і повертаюсь
-                </h3>
-                <p class="event__subtitle">
-                  Національний Художній Музей України презентує унікальну
-                  частину колекції Градобанку - українське мистецтво другої
-                  половини 1980-1995 років.
-                </p>
-              </article>
+                <article class="event events-section__event">
+                  <div
+                    class="event__info-top event__info-top--events-section-gap event__info-top--margin"
+                  >
+                    <span class="event__top-text event__top-text--name">
+                      ВИСТАВКА
+                    </span>
+                    <span class="event__top-text event__top-text--date">
+                      26.08-29.11.2019
+                    </span>
+                  </div>
+                  <h3 class="event__title event__title--before">
+                    Йду і повертаюсь
+                  </h3>
+                  <p class="event__subtitle">
+                    Національний Художній Музей України презентує унікальну
+                    частину колекції Градобанку - українське мистецтво другої
+                    половини 1980-1995 років.
+                  </p>
+                </article>
+              </div>
+              <div class="events-section__block_info">
+                <div class="events-section__image">
+                  <img
+                    src="./images/events-image-second.png"
+                    alt="Картина 'Дівчина і пава (1915)', написана у 1915 році"
+                    class="events-section__img"
+                  />
+                </div>
+                <article class="event events-section__event">
+                  <div
+                    class="event__info-top event__info-top--events-section-gap event__info-top--margin"
+                  >
+                    <span class="event__top-text event__top-text--name">
+                      ВИСТАВКА
+                    </span>
+                    <span class="event__top-text event__top-text--date">
+                      26.08-29.11.2019
+                    </span>
+                  </div>
+                  <h3 class="event__title event__title--before">
+                    І спогади і мрії
+                  </h3>
+                  <p class="event__subtitle">
+                    Національний художній музей України до 100 річчя від дня
+                    народження видатної української художниці Тетяни Яблонської
+                    відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                  </p>
+                </article>
+              </div>
             </div>
+          </div>
+        </section>
+      </div>
 
-            <div class="events-section__block_info">
-              <div class="events-section__image">
-                <img
-                  src="./images/events-image-second.png"
-                  alt="Картина 'Дівчина і пава (1915)', написана у 1915 році"
-                  class="events-section__img"
-                />
-              </div>
-              <article class="event events-section__event">
-                <div
-                  class="event__info-top event__info-top--events-section-gap event__info-top--margin"
-                >
+      <section class="landscape">
+        <div class="container">
+          <div class="landscape__content">
+            <div class="landscape__block-event">
+              <article class="event landscape__event">
+                <div class="event__info-top event__info-top--landscape-settings">
                   <span class="event__top-text event__top-text--name">
-                    ВИСТАВКА
+                    ЛЕКЦІЯ
                   </span>
                   <span class="event__top-text event__top-text--date">
-                    26.08-29.11.2019
+                    26/08/2019 - 11:00
                   </span>
                 </div>
-                <h3 class="event__title event__title--before">
-                  І спогади і мрії
-                </h3>
-                <p class="event__subtitle">
-                  Національний художній музей України до 100 річчя від дня
-                  народження видатної української художниці Тетяни Яблонської
-                  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
-                </p>
+                <h3 class="event__title event__title--on-phone">Від класицизму до романтизму</h3>
               </article>
             </div>
           </div>
         </div>
       </section>
-      <section></section>
-      <section></section>
+      <section class="gallery page__gallery">
+        <div class="container">
+          <div class="gallery__content">
+
+          </div>
+        </div>
+      </section>
       <section></section>
     </main>
 
