have fixed mistakes

--- a/src/index.html
+++ b/src/index.html
@@ -75,9 +75,11 @@
         href="#"
         class="logo header__logo"
       >
-        NA
-        <br />
-        MU
+        <div class="logo__text">
+          NA
+          <br />
+          MU
+        </div>
       </a>
 
       <img
@@ -352,7 +354,7 @@
                 <form
                   action="#"
                   class="subscription-form"
-                  onsubmit="this.reset(); scrollToTop(); return false;"
+                  onsubmit="this.reset(); return false;"
                 >
                   <input
                     type="email"
@@ -387,9 +389,11 @@
             href="#"
             class="logo footer__logo"
           >
-            NA
-            <br />
-            MU
+            <div class="logo__text">
+              NA
+              <br />
+              MU
+            </div>
           </a>
 
           <div class="footer__social-icons">
