--- a/src/index.html
+++ b/src/index.html
@@ -68,7 +68,7 @@
         </div>
 
         <a
-          href="!#"
+          href="#events"
           class="header__events-btn"
         >
           ПОДІЇ
@@ -312,7 +312,10 @@
         </div>
       </section>
 
-      <section class="subscription">
+      <section
+        class="subscription"
+        id="subscription"
+      >
         <div class="container subscription__container">
           <div class="subscription__wrapper">
             <h2 class="subscription__title title-h2">Підписка</h2>
@@ -330,6 +333,7 @@
               <input
                 type="email"
                 placeholder="E-mail"
+                required
                 class="form__field"
               />
               <button class="form__button"></button>
