add fix menu bug

--- a/src/index.html
+++ b/src/index.html
@@ -46,11 +46,13 @@
             <div class="header__info">
               <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
               <div class="header__info-footer">
-                <img
-                  src="./images/next-section.svg"
-                  alt="перехід до подій"
-                  class="header__next-section"
-                />
+                <a href="#events-section" class="header__link-text-section">
+                  <img
+                    src="./images/next-section.svg"
+                    alt="перехід до подій"
+                    class="header__next-section"
+                  />
+                </a>
                 <a
                   href="#"
                   class="header__link"
@@ -108,7 +110,7 @@
                   </li>
                   <li class="nav__item nav__item--height">
                     <a
-                      href="#"
+                      href="#events-section"
                       class="nav__link nav__link--menu-setting"
                     >
                       <span class="nav__link-text">Виставки та події</span>
@@ -190,7 +192,7 @@
 
     <main class="main">
       <div class="main__wrap">
-        <section class="events-section page__events-section">
+        <section class="events-section page__events-section" id="events-section">
           <div class="container">
             <div class="events-section__content">
               <h2 class="title events-section__title">Актуальні події</h2>
