--- a/src/index.html
+++ b/src/index.html
@@ -76,6 +76,44 @@
       </div>
     </header>
 
+    <header class="header-desk">
+      <div class="header-desk__top"></div>
+
+      <div class="container header-desk__container">
+        <div class="header-desk__top-bar">
+          <a
+            href="#menu"
+            class="header-desk__icon-menu icon icon--menu"
+          ></a>
+          <a
+            href="#"
+            class="header-desk__top-logo logo"
+          >
+            NA
+            <br />
+            MU
+          </a>
+        </div>
+
+        <div class="header-desk__bottom">
+          <h1 class="header-desk__bottom-title">ХУДОЖНІЙ МУЗЕЙ</h1>
+          <a
+            href="#events"
+            class="header-desk__bottom-btn"
+          >
+            <p>КВИТКИ</p>
+          </a>
+        </div>
+
+        <a
+          href="#events"
+          class="header-desk__events-btn"
+        >
+          ПОДІЇ
+        </a>
+      </div>
+    </header>
+
     <aside
       class="menu"
       id="menu"
