--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,10 @@
             <div class="header__info">
               <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
               <div class="header__info-footer">
-                <a href="#events-section" class="header__link-text-section">
+                <a
+                  href="#events-section"
+                  class="header__link-text-section"
+                >
                   <img
                     src="./images/next-section.svg"
                     alt="перехід до подій"
@@ -192,7 +195,10 @@
 
     <main class="main">
       <div class="main__wrap">
-        <section class="events-section page__events-section" id="events-section">
+        <section
+          class="events-section page__events-section"
+          id="events-section"
+        >
           <div class="container">
             <div class="events-section__content">
               <h2 class="title events-section__title">Актуальні події</h2>
@@ -250,7 +256,8 @@
                   <p class="event__subtitle">
                     Національний художній музей України до 100 річчя від дня
                     народження видатної української художниці Тетяни Яблонської
-                    відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                    відкриває ретроспективну ювілейну виставку «І спогади і
+                    мрії».
                   </p>
                 </article>
               </div>
@@ -264,7 +271,9 @@
           <div class="landscape__content">
             <div class="landscape__block-event">
               <article class="event landscape__event">
-                <div class="event__info-top event__info-top--landscape-settings">
+                <div
+                  class="event__info-top event__info-top--landscape-settings"
+                >
                   <span class="event__top-text event__top-text--name">
                     ЛЕКЦІЯ
                   </span>
@@ -272,7 +281,9 @@
                     26/08/2019 - 11:00
                   </span>
                 </div>
-                <h3 class="event__title event__title--on-phone">Від класицизму до романтизму</h3>
+                <h3 class="event__title event__title--on-phone">
+                  Від класицизму до романтизму
+                </h3>
               </article>
             </div>
           </div>
@@ -281,7 +292,49 @@
       <section class="gallery page__gallery">
         <div class="container">
           <div class="gallery__content">
+            <h2 class="title gallery__title">Галерея</h2>
 
+            <div class="gallery__wrap-images">
+              <div class="gallery__item gallery__item--1">
+                <img
+                  src="./images/gallery__image.png"
+                  alt="Картина 'Наречена' написана Кричевським Федором Григоровичем"
+                  class="gallery__image"
+                />
+              </div>
+
+              <div class="gallery__item gallery__item--2">
+                <img
+                  src="./images/gallery__image-2.png"
+                  alt="Картина 'Українське село взимку' написана Левченком"
+                  class="gallery__image"
+                />
+              </div>
+
+              <div class="gallery__item gallery__item--3">
+                <img
+                  src="./images/gallery__image-3.png"
+                  alt="Картина 'Сонячний день' написана Киріаком Костянтиновичем Костанді"
+                  class="gallery__image"
+                />
+              </div>
+
+              <div class="gallery__item gallery__item--4">
+                <img
+                  src="./images/gallery__image-4.png"
+                  alt="Картина 'На морі' написана Миколою Петровичем Глущенком"
+                  class="gallery__image"
+                />
+              </div>
+
+              <div class="gallery__item gallery__item--swiper">
+                <img
+                  src="./images/gallery__image-5.png"
+                  alt="Картина 'Гуси' написана Борисом Сердюком"
+                  class="gallery__image"
+                />
+              </div>
+            </div>
           </div>
         </div>
       </section>
